--- a/.github/workflows/auto-version-tag.yml
+++ b/.github/workflows/auto-version-tag.yml
@@ -65,28 +65,28 @@ jobs:
           echo "Target: $target"
 
           case "$source->$target" in
-            feat/*->feature)
+            "feat/*->feature")
               minor=$((minor + 1)); patch=0; suffix="-FEATURE" ;;
-            break/*->breaking)
+            "break/*->breaking")
               minor=$((minor + 1)); patch=0; suffix="-BREAKING" ;;
-            feature->develop)
+            "feature->develop")
               minor=$((minor + 1)); patch=0; suffix="-DEVELOP" ;;
-            breaking->develop)
+            "breaking->develop")
               major=$((major + 1)); minor=0; patch=0; suffix="-DEVELOP" ;;
-            hotfix/*->hotfix)
+            "hotfix/*->hotfix")
               patch=$((patch + 1)); suffix="-HOTFIX" ;;
-            develop->release)
+            "develop->release")
               last_tag=$(git tag --sort=-v:refname | grep -E '^v[0-9]+\.[0-9]+\.[0-9]+-DEVELOP$' | head -n1)
               version=$(echo "$last_tag" | sed -E 's/^v(.*)-DEVELOP$/\1/')
               IFS='.' read -r major minor patch <<< "$version"
               suffix="-RELEASE" ;;
-            release->master)
+            "release->master")
               last_tag=$(git tag --sort=-v:refname | grep -E '^v[0-9]+\.[0-9]+\.[0-9]+-RELEASE$' | head -n1)
               version=$(echo "$last_tag" | sed -E 's/^v(.*)-RELEASE$/\1/')
               IFS='.' read -r major minor patch <<< "$version" ;;
-            hotfix->master)
+            "hotfix->master")
               patch=$((patch + 1)) ;;
-            bugfix/*->develop)
+            "bugfix/*->develop")
               echo "Skipping tag for bugfix/* -> develop"
               echo "skip=true" >> $GITHUB_OUTPUT
               exit 0 ;;
